styles forgot styles page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class="col" role="group">
             <%= f.submit "Sign up", class: "btn btn-primary" %>
-            <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-link" %><br />
+            <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-link" %>
           </div>
         <% end %>
       </div>
