--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,9 +9,11 @@
         <li class="nav-item">
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
-        </li>
+        <% if signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -25,7 +27,9 @@
           <li><%= link_to "User settings", '#', class: "dropdown-item"%></li>
           <li><a class="dropdown-item" href="#">Another action</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <li>
+            <%= button_to "Log out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
+          </li>
         </ul>
       </li>
     </ul>
