--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ManagmentApp</a>
+    <%= link_to "ManagmentApp", root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,23 +15,29 @@
           </li>
         <% end %>
       </ul>
+    <% if signed_in? %>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= current_user.email %>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><%= link_to "User settings", '#', class: "dropdown-item"%></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li>
+              <%= button_to "Log out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    <% else %>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <%= link_to "Log in", new_user_session_path, class: "dropdown-item" %>
+        </li>
+      </ul>
+    <% end %>
     </div>
   </div>
-  <% if signed_in? %>
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <%= current_user.email %>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li><%= link_to "User settings", '#', class: "dropdown-item"%></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li>
-            <%= button_to "Log out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  <% end %>
 </nav>
