--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
             <%= current_user.email %>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><%= link_to "User settings", '#', class: "dropdown-item"%></li>
+            <li><%= link_to "User settings", edit_user_registration_path, class: "dropdown-item"%></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li>
