--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,9 @@
           <li class="nav-item">
             <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Tenants", tenants_path, class: "nav-link" %>
+          </li>
         <% end %>
       </ul>
     <% if signed_in? %>
